# oxismet

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml  ci.yml
smetlib/: Cargo.toml  README.md
smetlib/src/: lib.rs  stream.rs
src/: lib.rs  tests.rs
