[package]
name = "oxismet"
version = "0.1.0"
edition = "2024"
authors = ["Raj Singh"]
autobins = false
[dependencies]
aes-gcm = "0.11.0"
argon2 = "0.5.3"
clap = { version = "4.6.1", features = ["derive"] }
rand = "0.10.2"
zeroize = { version = "1.9.0", features = ["derive"] }
[lib]
name = "smet"
path = "src/lib.rs"
[[bin]]
name = "oxismet"
path = "src/bin/bin.rs"
