[package]
name = "oxismet"
version = "1.1.0"
edition = "2024"
authors = ["Raj Singh"]
description = "A mass encryption tool for servers"
license = "GPL-3.0-or-later"
repository = "https://github.com/OxiCrypt/oxismet"
autobins = false
autolibs = false
[dependencies]
aes-gcm = "0.11.0"
argon2 = "0.5.3"
clap = { version = "4.6.1", features = ["derive"] }
rand = "0.10.2"
zeroize = { version = "1.9.0", features = ["derive"] }
[lib]
name = "smet"
path = "src/lib/lib.rs"
[[bin]]
name = "oxismet"
path = "src/bin/bin.rs"
