[package]
name = "oxismet"
version = "1.2.2"
edition = "2024"
authors = ["Raj Singh"]
description = "A mass encryption tool for servers"
license = "GPL-3.0-or-later"
repository = "https://github.com/OxiCrypt/oxismet"
autobins = false
[dependencies]
aes-gcm = "0.11.0"
argon2 = "0.5.3"
clap = { version = "4.6.1", features = ["derive"] }
rand = "0.10.2"
smetlib = "0.1.0"
zeroize = { version = "1.9.0", features = ["derive"] }
[[bin]]
name = "oxismet"
path = "src/bin/bin.rs"
